[package]
name = "Fishing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11"
bevy-inspector-egui = "0.19"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
